src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Retrieve the source location of the given diagnostic.<br>
	 * * This location is where Clang would print the caret ('^') when<br>
	 * displaying the diagnostic on the command line.<br>
	 * Original signature : <code>CXSourceLocation clang_getDiagnosticLocation(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:793</i>
	 */
	CXSourceLocation.ByValue clang_getDiagnosticLocation(Pointer CXDiagnostic1);
	/**
	 * \brief Retrieve the text of the given diagnostic.<br>
	 * Original signature : <code>CXString clang_getDiagnosticSpelling(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:798</i>
	 */
	CXString.ByValue clang_getDiagnosticSpelling(Pointer CXDiagnostic1);
	/**
	 * \brief Retrieve the name of the command-line option that enabled this<br>
	 * diagnostic.<br>
	 * * \param Diag The diagnostic to be queried.<br>
	 * * \param Disable If non-NULL, will be set to the option that disables this<br>
	 * diagnostic (if any).<br>
	 * * \returns A string that contains the command-line option used to enable this<br>
	 * warning, such as "-Wconversion" or "-pedantic".<br>
	 * Original signature : <code>CXString clang_getDiagnosticOption(CXDiagnostic, CXString*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:812</i>
	 */
	CXString.ByValue clang_getDiagnosticOption(Pointer Diag, CXString Disable);
	/**
	 * \brief Retrieve the category number for this diagnostic.<br>
	 * * Diagnostics can be categorized into groups along with other, related<br>
	 * diagnostics (e.g., diagnostics under the same warning flag). This routine <br>
	 * retrieves the category number for the given diagnostic.<br>
	 * * \returns The number of the category that contains this diagnostic, or zero<br>
	 * if this diagnostic is uncategorized.<br>
	 * Original signature : <code>int clang_getDiagnosticCategory(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:825</i>
	 */
	int clang_getDiagnosticCategory(Pointer CXDiagnostic1);
	/**
	 * Original signature : <code>CXString clang_getDiagnosticCategoryName(unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:838</i>
	 */
	CXString.ByValue clang_getDiagnosticCategoryName(int Category);
	/**
	 * \brief Retrieve the diagnostic category text for a given diagnostic.<br>
	 * * \returns The text of the given diagnostic category.<br>
	 * Original signature : <code>CXString clang_getDiagnosticCategoryText(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:845</i>
	 */
	CXString.ByValue clang_getDiagnosticCategoryText(Pointer CXDiagnostic1);
	/**
	 * \brief Determine the number of source ranges associated with the given<br>
	 * diagnostic.<br>
	 * Original signature : <code>int clang_getDiagnosticNumRanges(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:851</i>
	 */
	int clang_getDiagnosticNumRanges(Pointer CXDiagnostic1);
	/**
	 * \brief Retrieve a source range associated with the diagnostic.<br>
	 * * A diagnostic's source ranges highlight important elements in the source<br>
	 * code. On the command line, Clang displays source ranges by<br>
	 * underlining them with '~' characters.<br>
	 * * \param Diagnostic the diagnostic whose range is being extracted.<br>
	 * * \param Range the zero-based index specifying which range to<br>
	 * * \returns the requested source range.<br>
	 * Original signature : <code>CXSourceRange clang_getDiagnosticRange(CXDiagnostic, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:866</i>
	 */
	CXSourceRange.ByValue clang_getDiagnosticRange(Pointer Diagnostic, int Range);
	/**
	 * \brief Determine the number of fix-it hints associated with the<br>
	 * given diagnostic.<br>
	 * Original signature : <code>int clang_getDiagnosticNumFixIts(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:873</i>
	 */
	int clang_getDiagnosticNumFixIts(Pointer Diagnostic);
	/**
	 * \brief Retrieve the replacement information for a given fix-it.<br>
	 * * Fix-its are described in terms of a source range whose contents<br>
	 * should be replaced by a string. This approach generalizes over<br>
	 * three kinds of operations: removal of source code (the range covers<br>
	 * the code to be removed and the replacement string is empty),<br>
	 * replacement of source code (the range covers the code to be<br>
	 * replaced and the replacement string provides the new code), and<br>
	 * insertion (both the start and end of the range point at the<br>
	 * insertion location, and the replacement string provides the text to<br>
	 * insert).<br>
	 * * \param Diagnostic The diagnostic whose fix-its are being queried.<br>
	 * * \param FixIt The zero-based index of the fix-it.<br>
	 * * \param ReplacementRange The source range whose contents will be<br>
	 * replaced with the returned replacement string. Note that source<br>
	 * ranges are half-open ranges [a, b), so the source code should be<br>
	 * replaced from a and up to (but not including) b.<br>
	 * * \returns A string containing text that should be replace the source<br>
	 * code indicated by the \c ReplacementRange.<br>
	 * Original signature : <code>CXString clang_getDiagnosticFixIt(CXDiagnostic, unsigned, CXSourceRange*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:900</i>
	 */
	CXString.ByValue clang_getDiagnosticFixIt(Pointer Diagnostic, int FixIt, CXSourceRange ReplacementRange);
	/**
	 * \brief Get the original translation unit source file name.<br>
	 * Original signature : <code>CXString clang_getTranslationUnitSpelling(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:921</i>
	 */
	CXString.ByValue clang_getTranslationUnitSpelling(ClangLibrary.CXTranslationUnit CTUnit);
	/**
	 * \brief Return the CXTranslationUnit for a given source file and the provided<br>
	 * command line arguments one would pass to the compiler.<br>
	 * * Note: The 'source_filename' argument is optional.  If the caller provides a<br>
	 * NULL pointer, the name of the source file is expected to reside in the<br>
	 * specified command line arguments.<br>
	 * * Note: When encountered in 'clang_command_line_args', the following options<br>
	 * are ignored:<br>
	 * *   '-c'<br>
	 *   '-emit-ast'<br>
	 *   '-fsyntax-only'<br>
	 *   '-o \<output file>'  (both '-o' and '\<output file>' are ignored)<br>
	 * * \param CIdx The index object with which the translation unit will be<br>
	 * associated.<br>
	 * * \param source_filename The name of the source file to load, or NULL if the<br>
	 * source file is included in \p clang_command_line_args.<br>
	 * * \param num_clang_command_line_args The number of command-line arguments in<br>
	 * \p clang_command_line_args.<br>
	 * * \param clang_command_line_args The command-line arguments that would be<br>
	 * passed to the \c clang executable if it were being invoked out-of-process.<br>
	 * These command-line options will be parsed and will affect how the translation<br>
	 * unit is parsed. Note that the following options are ignored: '-c',<br>
	 * '-emit-ast', '-fsyntax-only' (which is the default), and '-o \<output file>'.<br>
	 * * \param num_unsaved_files the number of unsaved file entries in \p<br>
	 * unsaved_files.<br>
	 * * \param unsaved_files the files that have not yet been saved to disk<br>
	 * but may be required for code completion, including the contents of<br>
	 * those files.  The contents and name of these files (as specified by<br>
	 * CXUnsavedFile) are copied when necessary, so the client only needs to<br>
	 * guarantee their validity until the call to this function returns.<br>
	 * Original signature : <code>CXTranslationUnit clang_createTranslationUnitFromSourceFile(CXIndex, const char*, int, const const char**, unsigned, CXUnsavedFile*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:964</i><br>
	 * @deprecated use the safer methods {@link #clang_createTranslationUnitFromSourceFile(com.sun.jna.Pointer, java.lang.String, int, byte[][], int, clang.CXUnsavedFile)} and {@link #clang_createTranslationUnitFromSourceFile(com.sun.jna.Pointer, com.sun.jna.Pointer, int, com.sun.jna.ptr.PointerByReference, int, clang.CXUnsavedFile)} instead
	 */
	@Deprecated
	ClangLibrary.CXTranslationUnit clang_createTranslationUnitFromSourceFile(Pointer CIdx, Pointer source_filename, int num_clang_command_line_args, PointerByReference clang_command_line_args, int num_unsaved_files, CXUnsavedFile unsaved_files);
	/**
	 * \brief Return the CXTranslationUnit for a given source file and the provided<br>
	 * command line arguments one would pass to the compiler.<br>
	 * * Note: The 'source_filename' argument is optional.  If the caller provides a<br>
	 * NULL pointer, the name of the source file is expected to reside in the<br>
	 * specified command line arguments.<br>
	 * * Note: When encountered in 'clang_command_line_args', the following options<br>
	 * are ignored:<br>
	 * *   '-c'<br>
	 *   '-emit-ast'<br>
	 *   '-fsyntax-only'<br>
	 *   '-o \<output file>'  (both '-o' and '\<output file>' are ignored)<br>
	 * * \param CIdx The index object with which the translation unit will be<br>
	 * associated.<br>
	 * * \param source_filename The name of the source file to load, or NULL if the<br>
	 * source file is included in \p clang_command_line_args.<br>
	 * * \param num_clang_command_line_args The number of command-line arguments in<br>
	 * \p clang_command_line_args.<br>
	 * * \param clang_command_line_args The command-line arguments that would be<br>
	 * passed to the \c clang executable if it were being invoked out-of-process.<br>
	 * These command-line options will be parsed and will affect how the translation<br>
	 * unit is parsed. Note that the following options are ignored: '-c',<br>
	 * '-emit-ast', '-fsyntax-only' (which is the default), and '-o \<output file>'.<br>
	 * * \param num_unsaved_files the number of unsaved file entries in \p<br>
	 * unsaved_files.<br>
	 * * \param unsaved_files the files that have not yet been saved to disk<br>
	 * but may be required for code completion, including the contents of<br>
	 * those files.  The contents and name of these files (as specified by<br>
	 * CXUnsavedFile) are copied when necessary, so the client only needs to<br>
	 * guarantee their validity until the call to this function returns.<br>
	 * Original signature : <code>CXTranslationUnit clang_createTranslationUnitFromSourceFile(CXIndex, const char*, int, const const char**, unsigned, CXUnsavedFile*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:964</i>
	 */
	ClangLibrary.CXTranslationUnit clang_createTranslationUnitFromSourceFile(Pointer CIdx, String source_filename, int num_clang_command_line_args, byte[] clang_command_line_args[], int num_unsaved_files, CXUnsavedFile unsaved_files);
	/**
	 * \brief Create a translation unit from an AST file (-emit-ast).<br>
	 * Original signature : <code>CXTranslationUnit clang_createTranslationUnit(CXIndex, const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:975</i><br>
	 * @deprecated use the safer methods {@link #clang_createTranslationUnit(com.sun.jna.Pointer, java.lang.String)} and {@link #clang_createTranslationUnit(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	ClangLibrary.CXTranslationUnit clang_createTranslationUnit(Pointer CXIndex1, Pointer ast_filename);
	/**
	 * \brief Create a translation unit from an AST file (-emit-ast).<br>
	 * Original signature : <code>CXTranslationUnit clang_createTranslationUnit(CXIndex, const char*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:975</i>
	 */
	ClangLibrary.CXTranslationUnit clang_createTranslationUnit(Pointer CXIndex1, String ast_filename);
